--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Titan X-Series 3D Cylinder</title>
     
     <!-- Google Fonts -->
@@ -30,15 +30,18 @@
             padding: 0;
         }
 
-        body {
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
             background-color: transparent; 
             font-family: var(--font-body);
             color: var(--text-main);
-            height: 100vh;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            position: relative;
+            /* PREVENT SCROLLING & BOUNCING */
+            overflow: hidden; 
+            overscroll-behavior: none;
+            position: fixed; /* Locks viewport on iOS */
         }
 
         /* --- SPOTLIGHT BACKGROUND --- */
@@ -84,6 +87,7 @@
             height: 100%;
             position: relative;
             perspective: 2500px; 
+            overflow: hidden; /* Critical for preventing 3D overflow scroll */
         }
 
         /* --- 3D CYLINDER STAGE (Left Side Desktop) --- */
@@ -95,6 +99,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            touch-action: none; /* Disable browser handling of gestures */
         }
 
         .carousel-track {
@@ -393,6 +398,7 @@
                 padding: 25px;
                 justify-content: flex-start;
                 overflow-y: auto; /* Allow scrolling content */
+                touch-action: pan-y; /* Allow vertical scroll within panel */
             }
             
             /* Slide Up Animation for Mobile */
